Update Auth Swagger
